# btsmart

./: .gitignore  CHANGELOG.rst  LICENSE.txt  README.rst  build.rst  build.sh  pyproject.toml  requirements.txt  setup.cfg
btsmart/: __init__.py
btsmart/btsmart/: __init__.py
btsmart/controller/: __init__.py
btsmart/parts/: __init__.py
doc/: backend_ble.rst  backend_usb.rst  conf.py  controller.rst  index.rst  parts.rst
docs/source/: conf.py  index.rst  modules.rst
examples/: api_test.py  btsmart-tutorial.ipynb  direct_access.py  test.py  test2.py  using_parts.py
src/btsmart/: __init__.py  backend_ble.py  backend_usb.py  btsmart.py  btsmart_core.py  btsmartparts.py  controller.py  parts.py
