[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btsmart"
version = "0.1.8"
authors = [
  { name="Rainer Neumann", email="rainer.neumann@h-ka.de" },
]
description = "A package providing convenient access to the Fischertechnik BT-Smart Controller"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rneumann/btsmart"
"Bug Tracker" = "https://github.com/rneumann/btsmart/issues"