[metadata]
name = btsmart
version = 0.1.0
license = MIT
description = A lightweight API to easily use the Fischertechnik BT-Smart Controller in combination with electronic parts
long_description = file: README.rst
author = Rainer Neumann
author_email = rainer.neumann@h-ka.de
classifiers=
   Development Status :: 4 - Beta
   Intended Audience :: Education
   License :: OSI Approved :: MIT License
   Natural Language :: English
   Operating System :: OS Independent
   Programming Language :: Python :: 3
   Topic :: Education

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   bleak

[options.packages.find]
where=src