[metadata]
name = btsmart
version = 0.1.8
license = MIT
description = A lightweight API to easily use the Fischertechnik BT-Smart Controller in combination with electronic parts
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Rainer Neumann
author_email = rainer.neumann@h-ka.de
url: https://github.com/rneumann/btsmart
classifiers=
   Development Status :: 4 - Beta
   Intended Audience :: Education
   License :: OSI Approved :: MIT License
   Natural Language :: English
   Operating System :: OS Independent
   Programming Language :: Python :: 3
   Topic :: Education

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    bleak
    pyftdi

[options.packages.find]
where=src

[bdist_wheel]
universal=1

[build_sphinx]
project = 'btsmart'
#version = 
#release = 1.2.0
source-dir = doc